@@ -1,3 +1,7 @@
+Thu Aug 21 07:16:42 2003  Joseph Heled  <pepster@users.sourceforge.net>
+
+	* gtkgame.c: Fix manually setting skill to 'good'.
+
 Wed Aug 20 19:20:51 2003  Joern Thyssen  <jth@gnubg.org>
 
 	Restore abs. ratings using the formulae provided by
